# psu_labki

./: .gitignore  .gitmodules  README.md  main.cpp  package-lock.json  package.json
aisd/: CMakeLists.txt  main.cpp
aisd/1lab/: 1lab.sln
aisd/1lab/1lab/: 1lab.cpp  1lab.vcxproj  1lab.vcxproj.filters
aisd/1lab/js/: index.js  package.json
aisd/2lab/: index.js
aisd/3lab/: index.js
aisd/4lab/: index.js
aisd/5lab-fix/: 5lab.js  index.js
aisd/6lab/: index.js  main.cpp
andrey/: 6lab.cpp
andrey/aisd/3lab/: main.cpp
c1s2/practice/: ОТЧЕТ.docx  Формы документов для отчета.docx
c1s2/practice/psu/: package-lock.json  package.json
c2s1/v10/aisd/: Отчёт степик.docx  форд-фалкерсон.pptx
c2s1/v10/epam/: EPAM Systems.docx  Отчёт по практике Купаленко.docx  Титульник а.docx
c2s1/v10/kpo/: Бланк_задания_на_курсовой_проект_по_КПО_лист_дусторонняя.docx  ОТЗЫВ.docx
c2s1/v10/kt/: КТ 3 отчет.doc  КТ Отчёт 1 Купаленко.docx  КТ Отчёт 2 Купаленко.docx  Отчёт КТ2.docx
c2s1/v10/pnya/: Новый текстовый документ (2).txt  ПНЯА 4.docx  ПНЯА 5.docx  ПНЯА 8.docx  пняа 7.docx
c2s1/v10/psu_aisd/: Аисд Отчёт.docx  Венгерский алгоритм.pptx  Отчёт степик(2).docx
c2s1/v10/psu_kpo/: KPO_Lab1.pdf PDF.URL
c2s1/v10/psu_kt/: КТ 5 Отчет.docx  Отчёт 4 КТ.docx  Титульный.docx
c2s1/v10/psu_philosophy/: Документ Microsoft Word.docx  Философская герменевтика.pptx
c2s1/v10/psu_pnya/: 5-6.txt  ПНЯА 6.docx  Пняа 9.docx
c2s1/v11/phylosophy/: Философия структурализма и её роль в развитии социально-гуманитарного знания..pptx
c2s1/v11/psyhology/: 2.docx  (+1 more)
c2s2/course/: hh.pkt  horay.pkt  pls.pkt  Ланцев ПЗ.docx  МетражПровода.docx  Разбиение на сети.docx  финалочка.docx
c2s2/ksis/: Lab4.pkt  lab2.pkt  Документ3.vsdx
c2s2/soc/: Ланцев Евгений - Тест 1.docx  Ланцев Евгений - Тест 2.docx  Ланцев Евгений - Тест 3.docx
c2s2/web/: datalist.html  fight.html  footer.html  index.html  main.html  nobr.html  senet.html  strike.html  style.css  var.html
c3s1/bd/: 21-IT-1 Yauheni Lantsau.docx  lab1.drawio  lab2.drawio  lab4-8.drawio  lab4_separate_schames.drawio  lab5.drawio
c3s1/oopip/: lab3.drawio
c3s2/bd/: database.drawio
c3s2/bd/course_project/project_manager_cpp/: .clang-format  CMakeLists.txt  docker-compose.yaml
c3s2/bd/course_project/project_manager_cpp/src/: main.cxx  project_manager.cxx  project_manager.hxx  sql_manager.cxx  sql_manager.hxx
c3s2/bd/course_project/project_manager_cpp/src/gui/: table_window.cxx  table_window.hxx  window.cxx  window.hxx
c3s2/bd/course_project/project_manager_cpp/src/models/: attachment.hxx  comment.hxx  file_type.hxx  model.hxx  project.hxx  project_details.hxx  project_reports.hxx  project_stage.hxx  project_status.hxx  report.hxx  role.hxx  task.hxx  task_status.hxx  task_tag.hxx  team.hxx  user.hxx
c3s2/ms/: settings.gradle.kts
c4s1/coi/: requirements.txt
oaip/5lab/: data  dd  main.cpp  mm.cpp
oaip/6lab/: a  data  heello  main.cpp  menu.cpp  menu.h  structure.cpp
oaip/7lab/: main.cpp
oaip/8lab/: main.cpp  main2.cpp
oaip/9lab/: main.cpp
oaip/andrey/: main.cpp
pnyavy/5lab/: CMakeLists.txt
pnyavy/6lab/: CMakeLists.txt
pnyavy/7lab/: index.js  main.cpp
pnyavy/8lab/: index.js  main.cpp
pnyavy/9lab/: index.js
pnyavy/lab5_1/: CMakeLists.txt
pnyavy/lab6_3/: CMakeLists.txt  main.cpp
pnyavy/lab6_4/: CMakeLists.txt  main.cpp
(+1304 files in other folders)
